api/swimos_schema/src/schema/tests/derive/validated_form/struct_body_with_schema.stderr
error: Fields marked as #[form(body)] cannot contain a schema
  --> src/schema/tests/derive/validated_form/struct_body_with_schema.rs:19:14
   |
19 |     struct S(#[form(body, schema(equal = "i64_eq"))] i64);
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
